# thread-pool-cpp

./: .travis.yml  CMakeLists.txt  appveyor.yml
tests/: CMakeLists.txt  thread_pool.t.cpp  thread_pool2.t.cpp  thread_pool2.t.hpp
thread_pool/: thread_pool.hpp  worker.hpp
